Fixed toast disappearing behind keyboard on mobile

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -8,3 +8,7 @@ main {
 .weather-container {
   min-height: 12.5rem;
 }
+
+.app-container {
+  min-height: 100dvh;
+}
